--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -50,7 +50,7 @@
                         android:id="@+id/recTitle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="sans-serif-light"
+                        android:fontFamily="@font/abel_regular"
                         android:maxLines="1"
                         android:text="Title"
                         android:textColor="@color/black"
