--- a/app/src/main/res/layout/recycler_item_explore.xml
+++ b/app/src/main/res/layout/recycler_item_explore.xml
@@ -7,11 +7,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:id="@+id/recCard"
+        android:layout_height="320dp"
+        android:id="@+id/recCardExplore"
         app:cardElevation="8dp"
         app:cardCornerRadius="16dp"
-        app:cardUseCompatPadding="true">
+        app:cardUseCompatPadding="true"
+        app:cardBackgroundColor="#E4E3E3"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -20,11 +22,10 @@
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="200dp"
-                android:orientation="vertical"
-                >
+                android:layout_height="300dp"
+                android:orientation="vertical">
                     <TextView
-                        android:id="@+id/recTitle"
+                        android:id="@+id/recTitleExplore"
                         android:layout_width="180dp"
                         android:layout_height="wrap_content"
                         android:text="Title"
@@ -34,7 +35,7 @@
                     <TextView
                         android:id="@+id/recContent"
                         android:layout_width="180dp"
-                        android:layout_height="100dp"
+                        android:layout_height="150dp"
                         android:text="Content"
                         android:textSize="20dp" />
 
@@ -54,7 +55,8 @@
                 android:layout_height="300dp"
                 android:layout_weight="4"
                 android:scaleType="centerCrop"
-                android:src="@drawable/cay_1" />
+                android:src="@drawable/cay_1"
+                />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
