--- a/app/src/main/res/layout/recycler_item_device.xml
+++ b/app/src/main/res/layout/recycler_item_device.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="70dp"
     android:id="@+id/layoutdevice"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
@@ -10,11 +10,13 @@
         android:layout_height="wrap_content"
         android:id="@+id/recCardevice"
         android:layout_margin="0dp"
+        app:cardCornerRadius="8dp"
+        app:cardUseCompatPadding="true"
        >
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <LinearLayout
@@ -88,7 +90,9 @@
         android:layout_width="match_parent"
         android:layout_height="107dp"
         android:id="@+id/recCardtemp"
-        app:cardBackgroundColor="#EDF2EF"
+        android:layout_margin="0dp"
+        app:cardCornerRadius="8dp"
+        app:cardUseCompatPadding="true"
         app:cardElevation="4dp">
         <!-- First Image and Text -->
 
@@ -98,7 +102,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="24dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="15dp"
             android:layout_marginBottom="30dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
@@ -116,8 +120,8 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:fontFamily="@font/abel_regular"
-                android:textColor="#06492C"
-                android:text="23°c" />
+                android:text="23°c"
+                android:textColor="#06492C" />
 
             <ImageView
                 android:layout_width="16dp"
@@ -131,7 +135,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="24dp"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="50dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
@@ -148,8 +152,8 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:fontFamily="@font/abel_regular"
-                android:textColor="#06492C"
-                android:text="85%" />
+                android:text="85%"
+                android:textColor="#06492C" />
 
             <ImageView
                 android:layout_width="16dp"
