--- a/app/src/main/res/xml/fragment_home_scene.xml
+++ b/app/src/main/res/xml/fragment_home_scene.xml
@@ -7,8 +7,10 @@
         motion:constraintSetEnd="@+id/end"
         motion:duration="1000">
         <OnSwipe
-            motion:touchAnchorId="@+id/button"
-            motion:touchAnchorSide="right"
+            motion:touchAnchorId="@+id/recyclerView"
+            motion:dragScale="1"
+            motion:onTouchUp="stop"
+            motion:touchAnchorSide="top"
             motion:dragDirection="dragRight" />
     </Transition>
 
@@ -21,6 +23,45 @@
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toTopOf="parent" />
+        <Constraint
+            android:layout_height="wrap_content"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintTop_toTopOf="parent"
+            motion:layout_constraintHorizontal_bias="0.0"
+            motion:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="wrap_content"
+            android:id="@+id/background" />
+        <Constraint
+            android:layout_width="match_parent"
+            android:layout_height="665dp"
+            motion:layout_editor_absoluteY="245dp"
+            motion:layout_editor_absoluteX="0dp"
+            android:id="@+id/recyclerView"
+            motion:layout_constraintTop_toBottomOf="@+id/background" />
+        <Constraint
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="665dp"
+            motion:layout_editor_absoluteY="245dp"
+            motion:layout_editor_absoluteX="0dp" />
+        <Constraint
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="665dp"
+            motion:layout_editor_absoluteY="245dp"
+            motion:layout_editor_absoluteX="0dp" />
+        <Constraint
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="665dp"
+            motion:layout_editor_absoluteY="245dp"
+            motion:layout_editor_absoluteX="0dp" />
+        <Constraint
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="665dp"
+            motion:layout_editor_absoluteY="245dp"
+            motion:layout_editor_absoluteX="0dp" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
@@ -37,6 +78,30 @@
             motion:layout_constraintTop_toTopOf="@+id/background"
             android:layout_width="match_parent"
             android:id="@+id/recyclerViewcard" />
+        <Constraint
+            android:id="@+id/background"
+            motion:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            motion:layout_constraintHorizontal_bias="1.0"
+            motion:layout_constraintTop_toTopOf="parent"
+            motion:layout_constraintStart_toStartOf="parent"
+            android:visibility="invisible" />
+        <Constraint
+            android:id="@+id/background"
+            motion:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            motion:layout_constraintHorizontal_bias="1.0"
+            motion:layout_constraintTop_toTopOf="parent"
+            motion:layout_constraintStart_toStartOf="parent"
+            android:visibility="invisible" />
+        <Constraint
+            android:layout_height="665dp"
+            motion:layout_editor_absoluteX="26dp"
+            android:layout_width="match_parent"
+            motion:layout_constraintTop_toBottomOf="@+id/background"
+            android:id="@+id/recyclerView" />
     </ConstraintSet>
 
 </MotionScene>
