Vi commit Login

--- a/app/src/main/res/layout/fragment_sildeshow.xml
+++ b/app/src/main/res/layout/fragment_sildeshow.xml
@@ -3,8 +3,53 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="20dp"
-    android:background="@android:color/holo_red_light">
+    android:padding="20dp">
+
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@drawable/phongngu"
+        android:layout_gravity="center"
+        android:background="@drawable/circle_background"
+        android:layout_marginTop="10dp"
+        android:clipToOutline="true"
+        android:outlineProvider="background"/>
+
+    <!-- Text Views -->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Thông tin 1"
+        android:textSize="18sp"
+        android:textColor="@color/black"
+        android:layout_marginBottom="10dp"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Thông tin 2"
+        android:textSize="18sp"
+        android:textColor="@color/black"
+        android:layout_marginBottom="10dp"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Thông tin 3"
+        android:textSize="18sp"
+        android:textColor="@color/black"
+        android:layout_marginBottom="10dp"/>
+
+    <!-- Circular Image View -->
 
 
+    <!-- Logout Button -->
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/logout_button"
+        android:text="Log Out"
+        android:textColor="@android:color/white"
+        android:backgroundTint="#0C9359"
+        android:layout_marginTop="20dp"/>
 </LinearLayout>
