--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -13,13 +13,26 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginTop="20dp"
             android:padding="20dp">
+           <Space
+            android:layout_width="200dp"
+            android:layout_height="40dp" />
 
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="187dp"
+
+                android:src="@drawable/undraw_forgot_password_re_hxwm">
+
+
+            </ImageView>
 
             <EditText
                 android:layout_width="300dp"
