--- a/app/src/main/res/layout/fragment_signup_tab.xml
+++ b/app/src/main/res/layout/fragment_signup_tab.xml
@@ -19,7 +19,14 @@
             android:layout_marginTop="20dp"
             android:padding="20dp">
 
-
+           <Space
+            android:layout_width="200dp"
+            android:layout_height="40dp" />
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="187dp"
+                android:src="@drawable/undraw_welcome_cats_thqn">
+            </ImageView>
 
             <EditText
                 android:layout_width="300dp"
