--- a/app/src/main/res/xml/fragment_home_scene.xml
+++ b/app/src/main/res/xml/fragment_home_scene.xml
@@ -1,107 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
+<MotionScene 
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:motion="http://schemas.android.com/apk/res-auto">
 
     <Transition
-        motion:constraintSetStart="@+id/start"
         motion:constraintSetEnd="@+id/end"
+        motion:constraintSetStart="@id/start"
         motion:duration="1000">
+       <KeyFrameSet>
+           <KeyAttribute
+               motion:motionTarget="@+id/background"
+               motion:framePosition="100"
+               android:alpha="0.5" />
+       </KeyFrameSet>
         <OnSwipe
             motion:touchAnchorId="@+id/recyclerView"
-            motion:dragScale="1"
-            motion:onTouchUp="stop"
-            motion:touchAnchorSide="top"
-            motion:dragDirection="dragRight" />
+            motion:touchAnchorSide="bottom" />
     </Transition>
 
     <ConstraintSet android:id="@+id/start">
-        <Constraint
-            android:id="@+id/button"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:layout_marginStart="8dp"
-            motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintStart_toStartOf="parent"
-            motion:layout_constraintTop_toTopOf="parent" />
-        <Constraint
-            android:layout_height="wrap_content"
-            motion:layout_constraintStart_toStartOf="parent"
-            motion:layout_constraintTop_toTopOf="parent"
-            motion:layout_constraintHorizontal_bias="0.0"
-            motion:layout_constraintEnd_toEndOf="parent"
-            android:layout_width="wrap_content"
-            android:id="@+id/background" />
-        <Constraint
-            android:layout_width="match_parent"
-            android:layout_height="665dp"
-            motion:layout_editor_absoluteY="245dp"
-            motion:layout_editor_absoluteX="0dp"
-            android:id="@+id/recyclerView"
-            motion:layout_constraintTop_toBottomOf="@+id/background" />
-        <Constraint
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="665dp"
-            motion:layout_editor_absoluteY="245dp"
-            motion:layout_editor_absoluteX="0dp" />
-        <Constraint
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="665dp"
-            motion:layout_editor_absoluteY="245dp"
-            motion:layout_editor_absoluteX="0dp" />
-        <Constraint
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="665dp"
-            motion:layout_editor_absoluteY="245dp"
-            motion:layout_editor_absoluteX="0dp" />
-        <Constraint
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="665dp"
-            motion:layout_editor_absoluteY="245dp"
-            motion:layout_editor_absoluteX="0dp" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
         <Constraint
-            android:id="@+id/button"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:layout_marginEnd="8dp"
-            motion:layout_constraintBottom_toBottomOf="parent"
-            motion:layout_constraintEnd_toEndOf="parent"
-            motion:layout_constraintTop_toTopOf="parent" />
-        <Constraint
-            android:layout_height="match_parent"
-            motion:layout_constraintTop_toTopOf="@+id/background"
-            android:layout_width="match_parent"
-            android:id="@+id/recyclerViewcard" />
-        <Constraint
             android:id="@+id/background"
             motion:layout_constraintEnd_toEndOf="parent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            motion:layout_constraintHorizontal_bias="1.0"
+            android:layout_width="1dp"
+            android:layout_height="1dp"
             motion:layout_constraintTop_toTopOf="parent"
-            motion:layout_constraintStart_toStartOf="parent"
-            android:visibility="invisible" />
-        <Constraint
-            android:id="@+id/background"
-            motion:layout_constraintEnd_toEndOf="parent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            motion:layout_constraintHorizontal_bias="1.0"
-            motion:layout_constraintTop_toTopOf="parent"
-            motion:layout_constraintStart_toStartOf="parent"
-            android:visibility="invisible" />
-        <Constraint
-            android:layout_height="665dp"
-            motion:layout_editor_absoluteX="26dp"
-            android:layout_width="match_parent"
-            motion:layout_constraintTop_toBottomOf="@+id/background"
-            android:id="@+id/recyclerView" />
+            motion:layout_constraintDimensionRatio="H,16:9"
+            motion:layout_constraintStart_toStartOf="parent" />
     </ConstraintSet>
-
 </MotionScene>
