--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,20 +10,22 @@
     tools:context=".MainActivity">
 
     <!-- Background Image -->
+
+    <!-- CardView wrapping RecyclerView -->
+
+    <!-- Floating Action Button -->
+
     <ImageView
         android:id="@+id/background"
         android:layout_width="422dp"
         android:layout_height="236dp"
         android:contentDescription="Background Icon"
-        android:src="@drawable/backgrou"
+        android:src="@drawable/img_13"
         app:layout_constraintDimensionRatio="H,16:9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- CardView wrapping RecyclerView -->
-
-    <!-- Floating Action Button -->
     <ImageView
         android:id="@+id/imageViewAdd"
         android:layout_width="50dp"
@@ -39,14 +41,12 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="412dp"
-        android:layout_height="632dp"
+        android:layout_height="1032dp"
         android:background="@drawable/rounded_background"
         android:scrollbars="vertical"
-        app:layout_constraintBottom_toTopOf="@id/imageViewAdd"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/background"
-        app:layout_constraintVertical_bias="0.115" />
+         />
 
 </androidx.constraintlayout.motion.widget.MotionLayout>
