--- a/app/src/main/res/xml/fragment_home_scene.xml
+++ b/app/src/main/res/xml/fragment_home_scene.xml
@@ -12,6 +12,15 @@
                motion:motionTarget="@+id/background"
                motion:framePosition="100"
                android:alpha="0.5" />
+           <KeyPosition
+               motion:motionTarget="@+id/background"
+               motion:framePosition="0"
+               motion:keyPositionType="deltaRelative" />
+           <KeyTrigger
+               motion:motionTarget="@+id/background"
+               motion:framePosition="70"
+               motion:onCross="method" />
+
        </KeyFrameSet>
         <OnSwipe
             motion:touchAnchorId="@+id/recyclerView"
@@ -19,6 +28,24 @@
     </Transition>
 
     <ConstraintSet android:id="@+id/start">
+        <Constraint
+            android:layout_height="662dp"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintHorizontal_bias="0.0"
+            motion:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="412dp"
+            motion:layout_constraintTop_toBottomOf="@id/background"
+            android:id="@+id/recyclerView"
+            motion:layout_editor_absoluteY="239dp" />
+        <Constraint
+            motion:layout_constraintDimensionRatio="H,16:9"
+            android:layout_height="239dp"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintTop_toTopOf="parent"
+            motion:layout_constraintHorizontal_bias="0.525"
+            motion:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="452dp"
+            android:id="@+id/background" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
@@ -30,5 +57,15 @@
             motion:layout_constraintTop_toTopOf="parent"
             motion:layout_constraintDimensionRatio="H,16:9"
             motion:layout_constraintStart_toStartOf="parent" />
+        <Constraint
+            motion:layout_constraintVertical_bias="0.115"
+            android:layout_height="864dp"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintBottom_toBottomOf="parent"
+            motion:layout_constraintHorizontal_bias="1.0"
+            motion:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="409dp"
+            motion:layout_constraintTop_toBottomOf="@id/background"
+            android:id="@+id/recyclerView" />
     </ConstraintSet>
 </MotionScene>
